--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
 :root {
-    --nav-offset: 50px; /* 桌機版分頁整列右移，可自行調整 */
+    --nav-offset: 50px;
 }
 
 body {
@@ -46,7 +46,7 @@ body {
 
 /* 分頁文字及效果 */
 .navbar-nav .nav-link {
-    color: #FFFFFF !important; /* 初始白色 */
+    color: #FFFFFF !important;
     font-weight: 700;
     transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
@@ -58,7 +58,7 @@ body {
 /* active 狀態亮黃色 */
 .navbar-nav .nav-link.active { color: #FFD700 !important; }
 
-/* 手機版樣式 */
+/* 手機版漢堡按鈕調整 */
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
         display: block;
@@ -68,14 +68,17 @@ body {
     }
     .navbar-nav .nav-link.active { color: #FFD700 !important; }
 
-    /* 漢堡圖示調整 */
+    /* 漢堡按鈕靠右偏左一點 */
     .navbar-toggler {
-        right: 20px;       /* 距螢幕右邊 10px */
-        position: absolute; /* 固定在右上角 */
+        position: absolute;
+        right: 20px;   /* 調整距螢幕右邊距離 */
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1050;
     }
     .navbar-toggler-icon {
-        width: 30px;       /* 增大圖示寬 */
-        height: 30px;      /* 增大圖示高 */
+        width: 30px;
+        height: 30px;
     }
 }
 
@@ -88,17 +91,8 @@ body {
     padding: 120px 20px 80px 20px;
     box-shadow: inset 0 0 100px rgba(0,0,0,0.3);
 }
-.hero h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
-}
-.hero-bottom-text {
-    margin-top: 30px;
-    font-size: 1.1rem;
-    font-weight: 500;
-    opacity: 0.95;
-}
+.hero h1 { font-size: 3rem; font-weight: 700; text-shadow: 1px 1px 8px rgba(0,0,0,0.5); }
+.hero-bottom-text { margin-top: 30px; font-size: 1.1rem; font-weight: 500; opacity: 0.95; }
 @media (max-width: 576px) {
     .hero { padding: 80px 15px 50px 15px; }
     .hero h1 { font-size: 1.8rem; line-height: 1.3; }
@@ -116,10 +110,7 @@ body {
     transform: translateY(50px);
     transition: all 0.8s ease;
 }
-.card-custom.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
+.card-custom.visible { opacity: 1; transform: translateY(0); }
 @media (max-width: 576px) { .card-custom { padding: 15px; } }
 
 /* 區塊標題 */
@@ -171,22 +162,22 @@ body {
 
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-<div class="container">
-    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院 114年度 </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse ms-auto" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
-            <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
-            <li class="nav-item"><a class="nav-link" href="registration.html">報名名單</a></li>
-            <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">當日報到系統</a></li>
-            <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
-        </ul>
+    <div class="container position-relative">
+        <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院 114年度 </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse ms-auto" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
+                <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
+                <li class="nav-item"><a class="nav-link" href="registration.html">報名名單</a></li>
+                <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">當日報到系統</a></li>
+                <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
+            </ul>
+        </div>
     </div>
-</div>
 </nav>
 
 <!-- Hero Banner -->
@@ -196,52 +187,52 @@ body {
 </section>
 
 <main class="container mt-5">
-<!-- 活動資訊 -->
-<section class="mb-5">
-    <h3 class="section-title mb-3">
-        <span class="calendar-icon">
-            <span class="month">11月</span>
-            <span class="day">28</span>
-        </span>
-        活動資訊一覽
-    </h3>
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <section class="card-custom">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
-                    <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館</li>
-                    <li class="list-group-item"><strong>廳別：</strong> <span style="color:#0077FF; font-weight:700;">2F東嬿廳</span></li>
-                </ul>
-            </section>
+    <!-- 活動資訊 -->
+    <section class="mb-5">
+        <h3 class="section-title mb-3">
+            <span class="calendar-icon">
+                <span class="month">11月</span>
+                <span class="day">28</span>
+            </span>
+            活動資訊一覽
+        </h3>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                <section class="card-custom">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
+                        <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
+                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館</li>
+                        <li class="list-group-item"><strong>廳別：</strong> <span style="color:#0077FF; font-weight:700;">2F東嬿廳</span></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="col-md-6 mb-3">
+                <section class="card-custom">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
+                        <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
+                        <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
+                        <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
+                    </ul>
+                </section>
+            </div>
         </div>
-        <div class="col-md-6 mb-3">
-            <section class="card-custom">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
-                    <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
-                    <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
-                    <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
-                </ul>
-            </section>
-        </div>
-    </div>
-</section>
-
-<!-- 交通與導航 -->
-<section class="mb-5">
-    <h3 class="section-title mb-3">📍 交通與導航</h3>
-    <section class="card-custom">
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
-            <li class="list-group-item">
-                <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">🚗 點擊前往 Google 地圖導航</a>
-            </li>
-            <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
-        </ul>
     </section>
-</section>
+
+    <!-- 交通與導航 -->
+    <section class="mb-5">
+        <h3 class="section-title mb-3">📍 交通與導航</h3>
+        <section class="card-custom">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
+                <li class="list-group-item">
+                    <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">🚗 點擊前往 Google 地圖導航</a>
+                </li>
+                <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
+            </ul>
+        </section>
+    </section>
 </main>
 
 <footer class="footer">
@@ -305,4 +296,3 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
-
